Prevent word wrap on buttons

--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -7,6 +7,7 @@
   transition: background-color 0.3s, border-color 0.3s, color 0.3s;
   text-transform: uppercase;
   font-weight: 600;
+  white-space: nowrap;
 }
 
 .button-skin:hover:not(:disabled),
